[package]
name = "stonkdonkey-polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = { version = "0.9.0", features = ["aws"] }
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
flate2 = "1.0.28"
deltalake = { version = "0.17.1", features = ["s3", "datafusion"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
arrow = "50.0.0"
dotenv = "0.15.0"
tokio-util = { version = "0.7.10", features = ["rt"] }
anyhow = "1"
backoff = { version = "0.4.0", features = ["tokio"] }
tracing = { version = "0.1", features = ["attributes", "log-always", "std"] }
tracing-subscriber = "0.3"
config = "0.14.0"
async-trait = "0.1.79"